// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the H3 component should accept additional props 1`] = `
<Text
  accessible={false}
  style={
    Object {
      "color": "#303030",
      "fontFamily": "InterUI-Black",
      "fontSize": 24,
      "lineHeight": 27.6,
    }
  }
>
  "The Christian shoemaker does his duty not by putting little crosses on the shoes, but by making good shoes, because God is interested in good craftsmanship." ― Martin Luther
</Text>
`;

exports[`the H3 component should accept and render passed in styles 1`] = `
<Text
  style={
    Object {
      "color": "salmon",
      "fontFamily": "InterUI-Black",
      "fontSize": 24,
      "lineHeight": 27.6,
    }
  }
>
  Salmon text
</Text>
`;

exports[`the H3 component should render a loading state 1`] = `
<Text
  style={
    Object {
      "color": "#303030",
      "fontFamily": "InterUI-Black",
      "fontSize": 24,
      "lineHeight": 27.6,
    }
  }
>
  Default H3 text
</Text>
`;

exports[`the H3 component should render a loading state with correct positioning (margins) 1`] = `
<Text
  padded={true}
  style={
    Object {
      "color": "#303030",
      "fontFamily": "InterUI-Black",
      "fontSize": 24,
      "lineHeight": 27.6,
      "paddingBottom": 18,
      "paddingTop": 27,
    }
  }
>
  Padded H3 text
</Text>
`;

exports[`the H3 component should render correctly 1`] = `
<Text
  style={
    Object {
      "color": "#303030",
      "fontFamily": "InterUI-Black",
      "fontSize": 24,
      "lineHeight": 27.6,
    }
  }
>
  Default H3 text
</Text>
`;

exports[`the H3 component should render with correct padding 1`] = `
<Text
  padded={true}
  style={
    Object {
      "color": "#303030",
      "fontFamily": "InterUI-Black",
      "fontSize": 24,
      "lineHeight": 27.6,
      "paddingBottom": 18,
      "paddingTop": 27,
    }
  }
>
  Padded H3 text
</Text>
`;
